force-app/main/default/objects/Lead_To_Referral_Status_Mapping__mdt/Lead_To_Referral_Status_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Lead To Referral Status Mapping</label>
    <pluralLabel>Lead To Referral Status Mappings</pluralLabel>
</CustomObject>