force-app/main/default/objects/Lead_To_Referral_Status_Mapping__mdt/fields/Lead_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Lead_Outcome__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Lead Outcome value</description>
    <label>Lead Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Opportunity</fullName>
                <default>true</default>
                <label>No Opportunity</label>
            </value>
            <value>
                <fullName>Opportunity Identified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>