force-app/main/default/objects/Lead_To_Referral_Status_Mapping__mdt/fields/Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Name__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Name of the Lead Record Type</description>
    <label>Record Type Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CCRM_Lead</fullName>
                <default>true</default>
                <label>CCRM_Lead</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>